2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: fix "application/x-tex-gf" and
	"application/x-tex-pk" globs. Fixes #5373. Thanks to Jens Herden.

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: remove "makefile*" glob from
	"text/x-makefile". Fixes #3256. Thanks to Björn Lindqvist.

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: merge ICB and TGA into TGA MIME type, add
	some more extensions. Fixes #1276. Thanks to Filip Van Raemdonck.

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-planperfect" MIME type.
	Fixes #3148.

2006-02-20  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Add "vi" (Vietnamese) to LINGUAS.

2006-02-19  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: also add "%" glob pattern to "text/x-tex".
	Still requires xdgmime fixes to not conflict with matlab:
	http://bugzilla.gnome.org/show_bug.cgi?id=331719

2006-02-07  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: fixed the typo that made it uninstallable

2006-02-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove "sub-class" association with
	text/plain for mime-types that it doesn't make sense to open in a
	text editor, see for details:
	http://lists.freedesktop.org/archives/xdg/2005-June/007032.html

2006-02-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.nfo as a pattern for README files

2006-02-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add image/pjpeg as an alias for image/jpeg

2006-01-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: don't expect a trailing space when looking
	for the SMIL magic (GNOME bug #328720)

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add Flash Video support, with the
	Macromedia recommended mime-type (flv-application/octet-stream)
	being an alias
