@@ -1,5 +1,10 @@
 2006-02-21  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add "application/x-gnuplot". Fixes #5455.
+	Thanks to Triastan Miller.
+
+2006-02-21  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: fix "application/x-tex-gf" and
 	"application/x-tex-pk" globs. Fixes #5373. Thanks to Jens Herden.
 
